--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
     text-align: center;
     font-size: 40px;
     font-weight: 800;
+    margin-bottom: 24px;
 }
 
 .feature-description {
@@ -108,6 +109,7 @@ body {
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+    margin-bottom: 48px;
 }
 
 .feature-photos {
@@ -230,4 +232,48 @@ body {
     border: none;
     color: #FFF;
     background: #E55473;
+}
+
+/* This is Instagram section  */
+.instagram-container {
+    margin-top: 178px;
+}
+
+.instagram-info {
+    text-align: center;
+}
+
+.instagram-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.instagram-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 48px;
+}
+
+.instagram-photos {
+    gap: 24px;
+    margin-top: 48px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+
+}
+
+.instagram-img {
+    display: inline;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 342px;
+    height: 396px;
 }
