--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body {
     position: relative;
 }
 
+.span-color {
+    color: #E55473;
+}
+
 /* This is nevbar section  */
 
 
 .menu-container {
-    background-color: #ffccb3;
+    background-color: #001a4d;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -182,6 +187,7 @@ body {
 .service-icon {
     height: 88px;
     width: 88px;
+    margin: 24px;
 }
 
 .service-title {
@@ -217,10 +223,6 @@ body {
     font-weight: 800;
     margin-bottom: 24px;
     text-align: center;
-}
-
-.span-color {
-    color: #E55473;
 }
 
 .sing-up-description {
@@ -358,3 +360,38 @@ body {
 }
 
 
+/* This is footer section  */
+.footer-section {
+    width: 100%;
+    height: 449px;
+    margin-top: 128px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #111010;
+}
+
+.footer-container {
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.footer-title {
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.footer-description {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.90);
+    margin-top: 24px;
+    margin-bottom: 32px;
+}
+
+.copyright {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.40);
+}
