--- a/style.css
+++ b/style.css
@@ -127,27 +127,31 @@ body {
 }
 
 .feature-img {
-    display: inline;
     display: flex;
-    align-items: center;
+    align-items:self-end;
     justify-content: center;
-    width: 464px;
-    height: 538px;
+    
 }
 
 .pink-tulip {
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
+    width: 464px;
+    height: 538px;
 }
 
 .bouquet {
     border-radius: 300px 300px 0px 0px;
     background: rgba(5, 151, 160, 0.15);
+    width: 464px;
+    height: 538px;
 }
 
 .yellow-tulip {
     border-radius: 300px 300px 0px 0px;
     background: rgba(71, 125, 17, 0.15);
+    width: 464px;
+    height: 538px;
 }
 
 .img-link {
